Footer added button fixed,overflow removed

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 :root {
@@ -16,9 +17,28 @@ html {
   --Secondary: #f9f9f9;
   --Tertiary: #b02970;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 14px;
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: pink;
+  border-radius: 2rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: plum;
+}
 .app {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   width: 100vw;
   background-color: var(--Background--color);
   background: #ee9ca7;
@@ -32,9 +52,10 @@ html {
 
 .home {
   width: 100vw;
-  min-height: 80vh;
+  min-height: 60vh;
   padding: 1rem;
   display: flex;
+  /* flex-wrap: wrap; */
   justify-content: space-between;
   align-items: center;
 }
