--- a/src/css/Button.css
+++ b/src/css/Button.css
@@ -10,19 +10,20 @@ button {
     position: relative;
     cursor: pointer;
 }
-button::after {
+/* button::after {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: pink;
+    background-color: #585bd4;
+    background-image:linear-gradient(to right,plum,#8e8ff2) ;
     z-index: -1;
     border-radius: 0.35rem;
     border: solid 2px black;
     transition: all 0.3s ease-in-out;
-}
+} */
 .style-1::after {
     width: 90%;
     height: 90%;
@@ -34,33 +35,35 @@ button::after {
     left: 0.5rem;
 }
 .style-5{
-    transition: 0.4s all ease;
+    transition: 0.2s all ease;
     
 }
 .style-5::after {
     /* border: 0; */
-    box-shadow: 0px 0px 0px 2px black;
-    top: 0.5rem;
-    right: 0.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* box-shadow: 0px 0px 0px 2px black; */
+    /* top: 0.5rem; */
+    /* right: 0.5rem; */
+    /* display: flex; */
+    /* justify-content: center; */
+    /* align-items: center; */
     
 }
 .style-5::before {
     /* border: 0; */
-    box-shadow: 0px 0px 0px 2px black;
-    top: 0.5rem;
-    bottom: 0.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* box-shadow: 0px 0px 0px 2px black; */
+    /* top: 0.5rem; */
+    /* bottom: 0.5rem; */
+    /* display: flex; */
+    /* justify-content: center; */
+    /* align-items: center; */
     
 }
 .style-5:hover {
-    background-color: pink;
+    /* background-color: #585bd4; */
     /* border: 0; */
-    transform: scale(1.1);
+    transform: scale(1.05);
+    background-image:linear-gradient(to right,plum,#d6d7f9) ;
+    color:#fff;
 }
 .style-5:hover::after {
     /* background-color: black; */
